Modificacion código español a inglés

--- a/Turing_Space_Schnakenberg.ipynb
+++ b/Turing_Space_Schnakenberg.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "e02dee69-5dcf-434b-9889-f70b95e0eda0",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,7 @@
     "class turing_space_schnakenberg:\n",
     "    \n",
     "    def __init__(self,list_total_elements,list_Dv):\n",
+    "        \n",
     "        self.list_total_elements = list_total_elements\n",
     "        self.list_Dv = list_Dv\n",
     "        self.a = []\n",
@@ -31,6 +32,7 @@
     "        self.Dv = []\n",
     "          \n",
     "    def Turing_Conditions(self):\n",
+    "        \n",
     "        for i in self.list_total_elements:\n",
     "            for j in self.list_total_elements:\n",
     "                for k in self.list_Dv:\n",
@@ -41,66 +43,104 @@
     "        return self.a,self.b,self.Dv\n",
     "        \n",
     "    def delete_repeated_elements(self):\n",
-    "        matriz_espacio_turing = np.array([self.a,self.b,self.Dv])\n",
-    "        matriz_espacio_turing = np.transpose(matriz_espacio_turing)\n",
+    "        \n",
+    "        turing_space_matrix = np.array([self.a,self.b,self.Dv])\n",
+    "        turing_space_matrix = np.transpose(turing_space_matrix)\n",
     "    \n",
     "        min = 0\n",
     "    \n",
-    "        espacio_turing = np.zeros([1,3])\n",
+    "        turing_space = np.zeros([1,3])\n",
     "    \n",
-    "        for i in range(len(matriz_espacio_turing)):\n",
-    "            max = int(matriz_espacio_turing[i][2])\n",
+    "        for i in range(len(turing_space_matrix)):\n",
+    "            max = int(turing_space_matrix[i][2])\n",
     "            if max >= min:\n",
     "                min = max\n",
     "            else:\n",
-    "                nuevo_renglon =np.array([matriz_espacio_turing[i-1]])\n",
-    "                espacio_turing = np.append(espacio_turing,nuevo_renglon,axis=0)\n",
+    "                new_row =np.array([turing_space_matrix[i-1]])\n",
+    "                turing_space = np.append(turing_space,new_row,axis=0)\n",
     "                min = 0\n",
     "    \n",
-    "        espacio_turing = espacio_turing[1:]\n",
+    "        turing_space = turing_space[1:]\n",
     "    \n",
-    "        espacio_turing = np.unique(espacio_turing, axis=0)\n",
+    "        turing_space = np.unique(turing_space, axis=0)\n",
     "    \n",
-    "        return espacio_turing\n",
+    "        return turing_space\n",
     "      "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "b99cecad-61a8-40e7-b4de-114a19b0055c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#creamos espacio turing\n",
+    "#we create an instance of the turing_space_schnakenberg class\n",
+    "\n",
     "list_total_numbers = np.round(np.linspace(0,10,1000),2)\n",
+    "\n",
     "list_diffusion_Dv = np.round(np.arange(21),2)\n",
     "\n",
     "space = turing_space_schnakenberg(list_total_numbers,list_diffusion_Dv)\n",
     "\n",
-    "a,b,Dv = space.Turing_Conditions()"
+    "a, b, Dv = space.Turing_Conditions()\n",
+    "\n",
+    "space_Turing = space.delete_repeated_elements()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "02c6cce8-a4ae-44e9-8fd5-52cfa059f690",
+   "execution_count": 31,
+   "id": "4fbce000-c9d4-4257-a92c-b55f3cf08849",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "turing_space_schnakenberg.delete_repeated_elements() takes 1 positional argument but 4 were given",
+     "ename": "NameError",
+     "evalue": "name 'ax' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m espacio_turings \u001b[38;5;241m=\u001b[39m \u001b[43mspace\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdelete_repeated_elements\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43mb\u001b[49m\u001b[43m,\u001b[49m\u001b[43mDv\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: turing_space_schnakenberg.delete_repeated_elements() takes 1 positional argument but 4 were given"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[31], line 8\u001b[0m\n\u001b[0;32m      3\u001b[0m y \u001b[38;5;241m=\u001b[39m space_Turing[\u001b[38;5;241m0\u001b[39m:,\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      5\u001b[0m z \u001b[38;5;241m=\u001b[39m space_Turing[\u001b[38;5;241m0\u001b[39m:,\u001b[38;5;241m2\u001b[39m]\n\u001b[1;32m----> 8\u001b[0m \u001b[43max\u001b[49m\u001b[38;5;241m.\u001b[39mplot(x,y,z)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'ax' is not defined"
      ]
     }
    ],
    "source": [
-    "espacio_turings = space.delete_repeated_elements(a,b,Dv)"
+    "x = space_Turing[0:,0]\n",
+    "\n",
+    "y = space_Turing[0:,1]\n",
+    "\n",
+    "z = space_Turing[0:,2]\n",
+    "\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9de6a705-4e34-44cd-8e48-c35370f24b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.  ,  1.01, 20.  ],\n",
+       "       [ 0.  ,  1.02, 20.  ],\n",
+       "       [ 0.  ,  1.03, 20.  ],\n",
+       "       ...,\n",
+       "       [ 0.25,  1.07, 20.  ],\n",
+       "       [ 0.25,  1.08, 20.  ],\n",
+       "       [ 0.25,  1.09, 20.  ]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "space_Turing[0:]"
    ]
   }
  ],
